new uploaded files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<p>Hell new page</p>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" href="./favicon.ico"><title>Instagram</title><link href="/ehabdevel/react-apollo-instagram-example/static/css/main.73505d12.css" rel="stylesheet"></head><body><div id="root"></div><script type="text/javascript" src="/ehabdevel/react-apollo-instagram-example/static/js/main.12f81958.js"></script></body></html>
